<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_ridepost"
            android:icon="@drawable/ridelist"
            android:title="@string/action_ridelist" />
        <item
            android:id="@+id/nav_postaride"
            android:icon="@drawable/postride"
            android:title="@string/action_postride" />
    </group>

<item android:title="">
        <menu>
            <item
                android:id="@+id/nav_ourculture"
                android:icon="@drawable/aboutus"
                android:title="@string/action_aboutus" />

            <item
                android:id="@+id/nav_currentlocation"
                android:icon="@drawable/location"
                android:title="@string/action_location" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout"
                    android:title="@string/action_logout" />
        </menu>
    </item>
</menu>
